--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,11 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>com.jnj.honeur</groupId>
+			<artifactId>security</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
 			<groupId>io.buji</groupId>
 			<artifactId>buji-pac4j</artifactId>
 			<version>${bujiVersion}</version>
