Cleanup + improved portal navigation + all URL's in application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,18 @@ server.port=8081
 
 shiro.cas=https://localhost:8443/cas
 shiro.server=http://localhost:8081
+shiro.loginUrl = /login.html
+# Let Shiro Manage the sessions
+shiro.userNativeSessionManager = true
+# disable URL session rewriting
+shiro.sessionManager.sessionIdUrlRewritingEnabled = false
 
-#spring.thymeleaf.prefix=classpath:/static/
-#spring.thymeleaf.suffix=.html
-#spring.thymeleaf.encoding=UTF-8
+cas.loginUrl=https://localhost:8443/cas/login
+cas.callbackUrl=http://localhost:8081/callback
+
+portal.atlasUrl=https://localhost:8443/WebAPI/user/oauth/cas
+portal.notebooksUrl=http://localhost:8082
+portal.userManagementUrl=http://localhost:4200
 
 logging.level.org.springframework.web=DEBUG
 logging.level.org.springframework.boot=DEBUG
@@ -14,9 +22,3 @@ logging.level.org.pac4j.cas=DEBUG
 logging.level.org.apache.shiro=DEBUG
 logging.level.org.hibernate=WARN
 
-
-shiro.loginUrl = /login.html
-# Let Shiro Manage the sessions
-shiro.userNativeSessionManager = true
-# disable URL session rewriting
-shiro.sessionManager.sessionIdUrlRewritingEnabled = false
